samples/_failures_safe/1761247877_293fb2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4ce8bbcd.c: In function ‘main’:
./samples/SAFE/__tmp_4ce8bbcd.c:164:8: error: expected ‘;’ at end of input
  164 |     bfs
      |        ^
      |        ;
./samples/SAFE/__tmp_4ce8bbcd.c:164:5: error: expected declaration or statement at end of input
  164 |     bfs
      |     ^~~
